# ask-ollama

./: Cargo.toml  README.md
src/: main.rs
