[package]
name = "ask-ollama"
authors = [
  "Harrison Hemstreet <https://github.com/HarrisonHemstreet> <HarrisonHemstreet@proton.me>",
]
version = "1.0.0"
edition = "2021"
description = "Query any LLM found on Ollama from the terminal!"
documentation = "https://github.com/HarrisonHemstreet/ask-ollama/blob/main/README.md"
readme = "README.md"
homepage = "https://crates.io/crates/ask-ollama"
repository = "https://github.com/HarrisonHemstreet/ask-ollama"
keywords = ["LLM", "Ollama", "AI", "Chatbot", "CLI"]
license = "MIT OR Apache-2.0"

[dependencies]
spinners-rs = "2.3.0"

[[bin]]
name = "ask"
path = "src/main.rs"
